# ibdnet

./: .gitignore  LICENSE  Makefile  README.md  ibdnet_IMPLEMENTATION_PLAN.md  pyproject.toml
configs/: infer_default.yaml  sim_human_mix.yaml  train_small.yaml
ibdnet/: __init__.py  config.py  logging_.py
ibdnet/infer/: __init__.py  cli_call.py  cli_prep.py  postproc.py  runner.py
ibdnet/io_/: __init__.py  bed.py  maps.py  plink.py  vcf.py  zarrio.py
ibdnet/model/: __init__.py  crf.py  emissions.py  heads.py  transitions.py  utils.py
ibdnet/pbwt/: __init__.py  fastarrays.py  features.py  pbwt_core.py
ibdnet/sims/: __init__.py  cli_simulate.py  labels.py  msprime_sim.py  slim_hooks.py  workspace.py
ibdnet/train/: __init__.py  calibrate.py  cli_eval.py  cli_train.py  dataset.py  loop.py  metrics.py
scripts/: bench_hapibd.py  bench_ilash.py  bench_phasedibd.py
tests/: test_crf.py  test_features.py  test_infer_end2end.py  test_pbwt.py  test_simulation.py  test_transitions.py
